[gd_scene load_steps=8 format=3 uid="uid://wxkixyuxoq8d"]

[ext_resource type="Script" path="res://components/sound_manager.gd" id="1_o8vgn"]
[ext_resource type="AudioStream" uid="uid://bddoftjs2wnho" path="res://assets/sound/cartoon_spring_bouncing_1.wav" id="2_yfgf3"]
[ext_resource type="AudioStream" uid="uid://bhe7wrogoxwji" path="res://assets/sound/cartoon_spring_bouncing_2.wav" id="3_uqsyx"]
[ext_resource type="AudioStream" uid="uid://bwvtovjw327fx" path="res://assets/sound/cartoon_spring_bouncing_3.wav" id="4_vyn2a"]
[ext_resource type="AudioStream" uid="uid://ct5d3uvspvuqc" path="res://assets/sound/cartoon_spring_bouncing_4.wav" id="5_ng86h"]
[ext_resource type="AudioStream" uid="uid://qkgaqhgkrt7d" path="res://assets/sound/cartoon_spring_bouncing_5.wav" id="6_2m6rs"]
[ext_resource type="AudioStream" uid="uid://dbkqxcp82suhg" path="res://assets/sound/cartoon_spring_bouncing_6.wav" id="7_puss7"]

[node name="SoundManager" type="Node2D"]
script = ExtResource("1_o8vgn")

[node name="BouncyHead" type="Node2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="BouncyHead"]
stream = ExtResource("2_yfgf3")
volume_db = -4.0

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="BouncyHead"]
stream = ExtResource("3_uqsyx")
volume_db = -4.0

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="BouncyHead"]
stream = ExtResource("4_vyn2a")
volume_db = -4.0

[node name="AudioStreamPlayer2D4" type="AudioStreamPlayer2D" parent="BouncyHead"]
stream = ExtResource("5_ng86h")
volume_db = -4.0

[node name="AudioStreamPlayer2D5" type="AudioStreamPlayer2D" parent="BouncyHead"]
stream = ExtResource("6_2m6rs")
volume_db = -4.0

[node name="AudioStreamPlayer2D6" type="AudioStreamPlayer2D" parent="BouncyHead"]
stream = ExtResource("7_puss7")
volume_db = -4.0

[node name="SoundPlaying" type="Timer" parent="BouncyHead"]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="BouncyHead/SoundPlaying" to="." method="_on_sound_playing_timeout"]
